--- a/scss/component/_button.scss
+++ b/scss/component/_button.scss
@@ -10,24 +10,21 @@
   padding: 10px 0;
   text-transform: uppercase;
   border-radius: 5px;
+
+  @include mq("tablet") {
+    padding: 10px 30px;
+  }
+  & + & {
+    margin-left: 10px;
+  }
 }
 
-.default {
-  background-color: $color-secondary;
-}
+@each $btn, $color in $buttons {
+  #{$btn} {
+    background-color: $color;
+  }
 
-.error {
-  background-color: #e4757a;
-}
-
-.info {
-  background-color: #927bc1;
-}
-
-.success {
-  background-color: #63cc82;
-}
-
-.warning {
-  background-color: #fd7856;
+  #{$btn}:hover {
+    background-color: lighten($color, 10%);
+  }
 }
