--- a/scss/component/_grid.scss
+++ b/scss/component/_grid.scss
@@ -4,12 +4,20 @@
 
 .container {
   padding: 0 10px;
+  @include mq("tablet") {
+    max-width: 1400px;
+    @include centered-block;
+  }
 }
 
 .row {
   display: flex;
   flex-direction: column;
   padding: 1em 10px;
+
+  @include mq("tablet") {
+    flex-direction: row;
+  }
 }
 
 [class^="col"] {
@@ -18,54 +26,35 @@
   min-height: 25px;
   padding: 10px;
   border-radius: 5px;
+
+  @include mq("tablet") {
+    display: flex;
+    justify-content: center;
+    margin-top: 0;
+    align-items: center;
+  }
+
+  & + [class^="col"] {
+    margin-left: 10px;
+  }
 }
 
-.theme.col-1 {
-  background-color: #927bc1;
+.centered {
+  @include mq("tablet") {
+    @include centered-block;
+  }
 }
 
-.theme.col-2 {
-  background-color: #fd7856;
-}
+@for $i from 1 through 12 {
+  .theme.col-#{$i} {
+    background-color: map-get($themes, $i);
+  }
 
-.theme.col-3 {
-  background-color: #deb2ee;
-}
-
-.theme.col-4 {
-  background-color: #7ee6fd;
-}
-
-.theme.col-5 {
-  background-color: #88d9a0;
-}
-
-.theme.col-6 {
-  background-color: #4da2bb;
-}
-
-.theme.col-7 {
-  background-color: #ec9fa3;
-}
-
-.theme.col-8 {
-  background-color: #fd9f85;
-}
-
-.theme.col-9 {
-  background-color: #e4757a;
-}
-
-.theme.col-10 {
-  background-color: #63cc82;
-}
-
-.theme.col-11 {
-  background-color: #51ddfc;
-}
-
-.theme.col-12 {
-  background-color: #80e8d1;
+  @include mq("tablet") {
+    .col-#{$i} {
+      flex-basis: calc((8.33% * #{$i}));
+    }
+  }
 }
 
 .card {
