--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -1,10 +1,38 @@
 //------------ Colors ------------//
 
 $color-primary: #58e1c1;
-$color-secondary: #51ddfc;
+$color-default: #51ddfc;
+$color-error: #e4757a;
+$color-info: #927bc1;
+$color-success: #63cc82;
+$color-warning: #fd7856;
 
 //------------ Break Points ------------//
 $breakpoints: (
   "tablet": 768px,
   "desktop": 1024px,
+);
+
+//------------ Buttons ------------//
+$buttons: (
+  ".error": $color-error,
+  ".default": $color-default,
+  ".success": $color-success,
+  ".warning": $color-warning,
+  ".info": $color-info,
+);
+
+$themes: (
+  1: #927bc1,
+  2: #fd7856,
+  3: #deb2ee,
+  4: #7ee6fd,
+  5: #88d9a0,
+  6: #4da2bb,
+  7: #ec9fa3,
+  8: #fd9f85,
+  9: #e4757a,
+  10: #63cc82,
+  11: #51ddfc,
+  12: #80e8d1,
 );
