--- a/scss/component/_grid.scss
+++ b/scss/component/_grid.scss
@@ -4,6 +4,7 @@
 
 .container {
   padding: 0 10px;
+  display: block;
   @include mq("tablet") {
     max-width: 1400px;
     @include centered-block;
